sas-bases/components/security/network/networking.k8s.io/ingress/nginx.ingress.kubernetes.io/full-stack-tls/sas-decisions-definitions-transformers.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-decisions-full-stack-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: full-stack
  - op: replace
    path: /spec/rules/0/http/paths/0/backend/service/port/number
    value: 443
  - op: replace
    path: /spec/rules/1/http/paths/0/backend/service/port/number
    value: 443
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-decisions
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-decisions-full-stack-tls-transformer-nginx
patch: |-
  - op: add
    path: /metadata/annotations/nginx.ingress.kubernetes.io~1backend-protocol
    value: HTTPS
target:
  version: v1
  kind: Ingress
  name: sas-decisions
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-treatment-definitions-full-stack-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: full-stack
  - op: replace
    path: /spec/rules/0/http/paths/0/backend/service/port/number
    value: 443
  - op: replace
    path: /spec/rules/1/http/paths/0/backend/service/port/number
    value: 443
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-treatment-definitions
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-treatment-definitions-full-stack-tls-transformer-nginx
patch: |-
  - op: add
    path: /metadata/annotations/nginx.ingress.kubernetes.io~1backend-protocol
    value: HTTPS
target:
  version: v1
  kind: Ingress
  name: sas-treatment-definitions
